@@ -1,8 +1,50 @@
 # AP_Music_player_project
-a project for AP subject about a music player called <b>"Navak"</b>
+A project for the subject "Advanced Programming" about a music player called <b>"Navak"</b>
 
 ## Features:
+### An account based app:
+create as many accounts as you wish! all it takes is your email/phone number, a password of your own choice and a username of your own choice as well!
+once done, you are good to go and will be moved into
 
+### A tab based library:
+Add any song from your phone into the app and create playlists. if you really like some songs why not like them to transport them to the "<i>liked tab</i>"
+enjoy listening to music :D
+
+### fairly customizable settings:
+Did you forget your password? Did you by any chance want to isolate yourself from people so that they don't send you their stupid songs? fear not as the <b><i>Settings page</i></b> will get this done. enter your new account name/password/email/phone to change your information and in case you want to be a private person, just check the checkbox below so people stop sending you their songs.
+
+### Vibe
+just enjoy the Vibe
+
+## Requirements:
+1- The latest version of flutter
+2- An IDE that can build apps for phone
+3- An android phone (yes we are those types of devs that make apps exclusive to one platform :P)
+
+## how to get the app working
+1- clone the repository
+2- create a new config for the backend part
+   within edit configs, in the VM options add the command below:
+```--add-opens java.base/java.time=ALL-UNNAMED ```
+3- add your PC IP address into every single socket section within the main.dart file
+   in case you don't know your IP address, type the command below into CMD
+```ipconfig``
+and copy the IPv4 attribute and paste it everywhere that has a socket within main.dart
+4- enjoy the show
+
+
+## Credits:
+The creators of Java, Flutter and dart.
+Iman Tat hesari: A man of patience, He can smell colors. if you see any flutter code that actually is good it is because he probably wrote it. he traded his sanity to revamp the backend code, write the entire Song loading system into the app and wrote fingerprint system.
+
+Mohammadamin "Bamdad" rashidi: Jack-of-all-trades, alwaus in a rush. the person who did most of the planning and direction, co-conceptualized the appreance of the app, wrote the entire backend before the revamp, designed the logo and the background images, and made the sharing and playlist systems.
+our families for emotional support and our good friends:
+
+AF,SDZ,ZV,KNF,RB,PA,AG and more who answered our questions. 
+
+our mentors:
+Navid raeiszadeh, Mohsen karbalaie, Amirhossein ghafarian and the other mentors.
+Doctor Sadegh aliakbari for his beneficial teaching.
 
 
 
